# INE5420-Computacao_Grafica

./: #ui.glade#  .gitignore  Main.py  Pipfile  README.md  add_object.glade  checklist.md  clip.py  clipNOPE.py  drawable_line.py  drawable_point.py  drawable_polygon.py  include_object.glade  line.py  main.py  matrixTransform.py  object.py  point.py  polygon.py  pyproject.toml  setup.sh  ui.glade  viewport.py  window.py
ine5420_computacao_grafica/: __main__.py  base_forms.py  clip.py  curve.py  descriptorOBJ.py  matrixTransform.py  object.py  viewport.py  window.py
ine5420_computacao_grafica/ui/: add_object.glade  preferences.glade  select_file.glade  ui.glade
tests/: test_ine5420_computacao_grafica.py
