[tool.poetry]
name = "INE5420-Computacao_Grafica"
version = "0.1.0"
description = ""
authors = ["Arthur Mesquita Pickcius <arthur.pickcius@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pkgconfig = "^1.5"

[build-system]
requires = ["poetry>=0.12", 
    "cairo",
    "pkgconf",
    "gobject-introspection",
    "gtk3",
    "setuptools",
    "wheel",
    "pycairo"
]
build-backend = "poetry.masonry.api"
